--- a/frontend/tradebot/src/App.css
+++ b/frontend/tradebot/src/App.css
@@ -37,6 +37,7 @@
   }
 }
 
+/* Global Styles */
 
 :root {
   --light: #f6f6f9;
@@ -57,7 +58,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* Other styles */
 }
 
 body{
@@ -76,15 +76,30 @@ li{
   list-style-type: none;
 }
 
+.background {
+  background-image: url("https://cdn2.etrade.net/1/20033018150.0/aempros/content/dam/etrade/retail/en_US/images/what-we-offer/investment-choices/options-call-put.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #0056b3;
+}
+
+/* Main content styles */
+.main {
+  /* flex-grow: 1; Allow main content to grow and fill remaining space */
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Sidebar */
 
 .sidebar {
-  position: fixed;
+  /* position: fixed;
   top: 0; 
-  left: 0; 
+  left: 0;  */
   width: 300px; 
-  height: 100%; 
+  height: 100vh; 
   background-color: var(--light);
   padding: 20px 10px;
   z-index: 2;
@@ -140,7 +155,7 @@ li{
 
 
 
-.container {
+/* .container {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -154,19 +169,29 @@ li{
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+
+.container {
+  display: flex; /* Use flexbox layout */
+  flex-direction: row; /* Arrange flex items horizontally */
+  height: 100vh; /* Full height of viewport */
 }
 
-.home-container {
-  position: fixed;
+
+.content-container {
+  /* position: fixed;
   top: 50%;
-  left: 50%;
-  width: 900px;
-  height: 600px;
-  transform: translate(-50%, -50%); 
+  left: 50%; */
+  max-width: calc(100% - 300px);
+  padding: 50px;
+  width: auto;
+  height: 400px;
+  /* transform: translate(-50%, -50%);  */
   background-color: #f0f0f0;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   flex-direction: column;
+  /* flex: 1; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -194,9 +219,10 @@ li{
 }
 
 .profile-container {
-  top: 20%;
+  /* top: 20%;
   left: 30%;
-  position: absolute;
+  position: absolute; */
+  /* max-width: calc(100% - 300px); */
   width: 800px;
   margin: 0 auto;
   padding: 20px;
@@ -242,7 +268,8 @@ li{
 
 
 .chat-container {
-  max-width: 600px;
+  width: 1100px;
+  height: 800px;
   margin: 0 auto;
   padding: 20px;
   background-color: #f0f0f0;
