--- a/frontend/tradebot/src/App.css
+++ b/frontend/tradebot/src/App.css
@@ -276,6 +276,15 @@ li{
   border-bottom: 2px solid #ccc;
 }
 
+.profile-container h4 {
+  font-size:11x;
+  font-weight: bold;
+  color: #333;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  text-shadow: 1px 1px 2px #bbb; /* Light grey shadow for depth */
+}
+
 
 
 .profile-info h2 {
@@ -313,6 +322,7 @@ li{
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 14px
 }
 
 .profile-button:hover {
@@ -510,7 +520,7 @@ li{
   font-weight: bold;    /* Make label text bold */
 }
 
-.form-group input {
+.form-group input select {
   flex: 1;              /* Take up the remaining space */
   padding: 8px;
   border: 1px solid #ccc;
@@ -528,4 +538,13 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+.profile-container p {
+  margin-top: 10px; /* Margin on top of the paragraph */
+  margin-bottom: 10px; /* Margin below the paragraph */
+  font-size: 16px; /* A comfortable reading size */
+  line-height: 1.6; /* Adequate space between lines for readability */
+  color: #333; /* A darker grey for better readability */
+  text-align: justify; /* Justifies the text if preferred */
 }
